[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "Madgwick's orientation filter"
documentation = "https://docs.rs/madgwick"
keywords = ["MARG", "IMU", "orientation", "filter"]
license = "MIT OR Apache-2.0"
name = "madgwick" # rename and publish alt-
repository = "https://github.com/copterust/madgwick"
version = "0.1.1"

[dependencies]
libm = "0.1.2"

[dependencies.nalgebra]
default-features = false
version = "0.16.0"
